Functional Game Working. Still WIP

--- a/Basic Chess Game.vcxproj
+++ b/Basic Chess Game.vcxproj
@@ -146,13 +146,26 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Basic Chess Game.cpp" />
+    <ClCompile Include="Bishop.cpp" />
     <ClCompile Include="Board.cpp" />
+    <ClCompile Include="King.cpp" />
+    <ClCompile Include="Knight.cpp" />
+    <ClCompile Include="Pawn.cpp" />
     <ClCompile Include="Piece.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Queen.cpp" />
+    <ClCompile Include="Rook.cpp" />
     <ClCompile Include="TextureManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Basic Chess Game.h" />
+    <ClInclude Include="Bishop.h" />
     <ClInclude Include="Board.h" />
+    <ClInclude Include="King.h" />
+    <ClInclude Include="Knight.h" />
+    <ClInclude Include="Pawn.h" />
+    <ClInclude Include="Queen.h" />
+    <ClInclude Include="Rook.h" />
     <ClInclude Include="TextureManager.h" />
     <ClInclude Include="Piece.h" />
     <ClInclude Include="Player.h" />
